--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,7 +9,9 @@ dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^0.1.3
-  firebase_auth: ^0.15.5+3
+  firebase_auth: ^0.16.0
+  redux: ^4.0.0
+  flutter_redux: ^0.6.0
 
 dev_dependencies:
   flutter_test:
