--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,8 @@ dependencies:
   firebase_auth: ^0.16.0
   redux: ^4.0.0
   flutter_redux: ^0.6.0
+  cloud_firestore: ^0.13.5
+
 
 dev_dependencies:
   flutter_test:
