--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   firebase_storage: ^3.1.5
   redux_epics: ^0.13.0
   rxdart: ^0.23.0
+  timeago: ^2.0.26
 
 dev_dependencies:
   flutter_test:
