--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   path_provider: ^1.6.7
   uuid: ^2.0.4
   firebase_storage: ^3.1.5
+  firebase_messaging: ^6.0.15
   redux_epics: ^0.13.0
   rxdart: ^0.23.0
   timeago: ^2.0.26
