--- a/ios/Runner/GoogleService-Info.plist
+++ b/ios/Runner/GoogleService-Info.plist
@@ -6,6 +6,8 @@
 	<string>730555540635-p02t5mc76d5uvbdbpiq4od8s0vrqe5ng.apps.googleusercontent.com</string>
 	<key>REVERSED_CLIENT_ID</key>
 	<string>com.googleusercontent.apps.730555540635-p02t5mc76d5uvbdbpiq4od8s0vrqe5ng</string>
+	<key>ANDROID_CLIENT_ID</key>
+	<string>730555540635-isig7panq5bp3nmrqud64kmvc237oevq.apps.googleusercontent.com</string>
 	<key>API_KEY</key>
 	<string>AIzaSyCNxgesbL1zsm6_ZGH6YkZUYbrerBXZptg</string>
 	<key>GCM_SENDER_ID</key>
