--- a/functions/package.json
+++ b/functions/package.json
@@ -14,6 +14,8 @@
   },
   "main": "lib/index.js",
   "dependencies": {
+    "@types/algoliasearch": "^3.34.10",
+    "algoliasearch": "^4.2.0",
     "firebase-admin": "^8.10.0",
     "firebase-functions": "^3.6.1"
   },
