--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,12 +9,12 @@ dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^0.1.3
-  firebase_auth: ^0.16.0
+  firebase_auth: ^0.16.1
   redux: ^4.0.0
   flutter_redux: ^0.6.0
   flutter_localizations:
     sdk: flutter
-  cloud_firestore: ^0.13.5
+  cloud_firestore: ^0.13.6
   intl: ^0.16.1
   email_validator: ^1.0.4
   password_strength: ^0.1.2
@@ -23,11 +23,12 @@ dependencies:
   camera: ^0.5.8+2
   path_provider: ^1.6.9
   uuid: ^2.0.4
-  firebase_storage: ^3.1.5
-  firebase_messaging: ^6.0.15
+  firebase_storage: ^3.1.6
+  firebase_messaging: ^6.0.16
   redux_epics: ^0.14.0
   rxdart: ^0.24.1
   timeago: ^2.0.26
+  algolia: ^0.1.7
 
 dev_dependencies:
   flutter_test:
